v1.0.x -
Additions:
* Camera:
	- Update(bool Interpolated = false)
* EntityPickup:
	- GetMegaChest[Left/Right]Collectible
	- Returns the other EntityPickup for a Mega Chest
* EntityPlayer:
	- [Get/Set]ActionHoldDrop - how long player holds action drop button.
	- [Get/Set]ForgottenSwapFormCooldown
* EntityFamiliar:
	- IsLilDelirium
	- SetLilDelirium
* Level:
	- Added overloads for CanPlaceRoom(AtDoor) and FindValidRoomPlacementLocations that accept a RoomShape and DoorMask instead of a RoomConfigRoom.
* ModCallbacks:
	- MC_PRE_PLAYER_POCKET_ITEMS_SWAP(EntityPlayer player)
		Triggers when the player swaps their pocket items using the action drop button (even if they are empty).
		Return true to cancel pocket item swap.
	- MC_PRE_TRIGGER_BED_SLEEP_EFFECT(EntityPlayer player, EntityPickup bed)
		Triggers if Bed target (bed.Target) is set to player and "SleepFillHP" item overlay sprite's event is triggered, and before the hearts addition is applied.
		Return true to cancel vanilla behavior.
	- MC_POST_TRIGGER_BED_SLEEP_EFFECT(EntityPlayer player, EntityPickup bed)
	- MC_PRE_BED_SLEEP(EntityPlayer player, EntityPickup bed)
		Triggers on bed collision and before playing sleep sequence.
		Return true to cancel vanilla behavior.
	- MC_PRE_ENTITY_SET_COLOR(Entity entity, int duration, int priority, bool fadeOut, bool share)
		Fires when Entity:SetColor is called
		Takes an EntityType as its optional argument. 
		Return a color to override the color. The overridden color is passed into MC_POST_ENTITY_SET_COLOR.
		Return false to cancel the color change. Prevents MC_POST_ENTITY_SET_COLOR from firing.
		This only fires for `Entity:SetColor` and does not fire when changing the entity's color directly.
	- MC_POST_ENTITY_SET_COLOR(Entity entity, int duration, int priority, bool fadeOut, bool share)
		Fires after an entity's color is changed via Entity:SetColor
		This only fires for `Entity:SetColor` and does not fire when changing the entity's color directly.