@@ -1,4 +1,6 @@
 v1.0.x -
+* Welcome to REPENTOGON+ !
+/newline/
 Additions:
 * Camera:
 	- Update(bool Interpolated = false)
@@ -65,11 +67,14 @@ Modified:
 * EntityPlayer:
 	- DropCollectible now returns the spawned pedestal if one was spawned, as intended 
 	- SwapForgottenForm returns boolean, depending if Forgotten/Soul form was switched or not.
-* Level:
-	- TryPlaceRoom(AtDoor) no longer plays the key unlock sound if a room is created that connects to the player's current room.
 * ImGui:
 	- Adding an element with the same id as an existing one will now replace the existing element instead of throwing an error.
 	- If an error is caused by a callback, imgui will now properly throw an error
+* Level:
+	- TryPlaceRoom(AtDoor) no longer plays the key unlock sound if a room is created that connects to the player's current room.
+* ModCallbacks:
+	- MC_POST_PLAYER_TRIGGER_EFFECT_REMOVED(EntityPlayer Player, int Count)
+		Added Count argument (how many instances of this effect were removed)
 * Vanilla daily run leaderboard will now mark the submitted run entry with a transparent color if the run was cheated.
 Fixes:
 * ImGui:
